syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "Messages/BackstitchId.proto";

message BackstitchesMarked {
    string source_id = 1;
    repeated BackstitchId backstitches = 2;
}
