syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "BackstitchId.proto";

message BackstitchesUnmarked {
    string source_id = 1;
    repeated BackstitchId backstitches = 2;
}
