syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "BackstitchId.proto";
import public "StitchCoordinates.proto";

message MarkBackstitches {
    string pattern_id = 1;
    repeated BackstitchId backstitches = 2;
}

message UnmarkBackstitches {
    string pattern_id = 1;
    repeated BackstitchId backstitches = 2;
}

message MarkStitches {
    string pattern_id = 1;
    repeated StitchCoordinates stitches = 2;
}

message UnmarkStitches {
    string pattern_id = 1;
    repeated StitchCoordinates stitches = 2;
}


