syntax = "proto3";
package pattern;

option csharp_namespace = "Service";

message DeletePattern {
    string id = 1;
}
