syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "Messages/Pattern.proto";

message GetThumbnail {
    string id = 1;
    int32 width = 2;
    int32 height = 3;
    Pattern pattern = 4;
}
