syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "StitchId.proto";

message StitchesMarked {
    string source_id = 1;
    repeated StitchId stitches = 2;
}
