syntax = "proto3";
package pattern;

option csharp_namespace = "Service";
import public "StitchCoordinates.proto";

message StitchesUnmarked {
    string source_id = 1;
    repeated StitchCoordinates stitches = 2;
}
